Fix UI on mobile

--- a/src/assets/styles/components/CardConteiner.scss
+++ b/src/assets/styles/components/CardConteiner.scss
@@ -7,7 +7,6 @@
     flex-wrap: wrap;
     padding: 20px 80px;
     @media screen and (max-width: $tablet) {
-        flex-direction: column;
         padding: 20px 0;
     }
 }
